--- a/teamproject-front/package.json
+++ b/teamproject-front/package.json
@@ -10,8 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nivo/pie": "^0.87.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "dayjs": "^1.11.12",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "react-naver-login": "^0.1.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
