--- a/teamproject-front/package.json
+++ b/teamproject-front/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "prop-types": "^15.8.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
